--- a/editer.html
+++ b/editer.html
@@ -68,7 +68,7 @@
             },
             {
                 "bold": 0,
-                "type": "dateformat",
+                "type": "ampm",
                 "array": [
                     "上午",
                     "下午"
