--- a/editer.html
+++ b/editer.html
@@ -29,6 +29,7 @@
     <div class="edit">
         <button class="btn btn-lg btn-success" style="margin :2px" onclick="downJson()">下载配置</button>
         <button class="btn btn-lg btn-primary" style="margin :2px" onclick="resetConfByUser()">应用配置</button>
+        <a style="margin :10px;" href="https://ghbhaha.github.io/DateTimewallpaper_Communication/"><b>参考文档</b></a>
         <input class="form-control" style="margin :2px" id="confName" value="cusconf.json">
         <textarea class="form-control" style="margin :2px;flex-grow:1" id="confTextArea"></textarea>
     </div>
